--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coder</title>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Poppins&display=swap" rel="stylesheet" />
 </head>
 <body>
-    
+    <nav>
+        <div class="logo">
+          <h1><a href="#landing"></a>Coder</h1>
+        </div>
+        <ul>
+          <li><a href="#About">About</a></li>
+          <li><a href="#service">Service</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    <section id="Lorem">
+        <div class="container">
+          <div class="row">
+            <div class="col-1">
+              <p>Lorem ipsum dolor</p> 
+              <p> sit amet consectetur</p>
+              <button class="btn-1" type="button">More Info</button>
+              <button class="btn-2" type="button"><a class="button-contactus" href="#contact">Contact Us</a></button>
+            </div>
+  </section>
 </body>
 </html>
