--- a/index.html
+++ b/index.html
@@ -24,11 +24,19 @@
         <div class="container">
           <div class="row">
             <div class="col-1">
-              <p>Lorem ipsum dolor</p> 
-              <p> sit amet consectetur</p>
+              <h1>Lorem ipsum dolor</h1>
+              <h2>sit amet consectetur</h2>
+              <p>Lorem ipsum dolor sit amet consectetur</p>
+              <p>adipisicing elit. Dolores, eum autem.</p>
               <button class="btn-1" type="button">More Info</button>
               <button class="btn-2" type="button"><a class="button-contactus" href="#contact">Contact Us</a></button>
             </div>
+            <div class="col-2">
+              <img src="images/landing.png" alt="gambar landing">
+            </div>
+          </div>
+        </div>
+      </section>
   </section>
 </body>
 </html>
