--- a/index.html
+++ b/index.html
@@ -11,32 +11,35 @@
 </head>
 <body>
     <nav>
-        <div class="logo">
-          <h1><a href="#landing"></a>Coder</h1>
+        <div class="navbar">
+          <h1><a href="#Coder"></a>Coder</h1>
         </div>
         <ul>
           <li><a href="#About">About</a></li>
-          <li><a href="#service">Service</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#Service">Service</a></li>
+          <li><a href="#Contact">Contact</a></li>
         </ul>
       </nav>
-    <section id="Lorem">
-        <div class="container">
-          <div class="row">
-            <div class="col-1">
-              <h1>Lorem ipsum dolor</h1>
-              <h2>sit amet consectetur</h2>
-              <p>Lorem ipsum dolor sit amet consectetur</p>
-              <p>adipisicing elit. Dolores, eum autem.</p>
-              <button class="btn-1" type="button">More Info</button>
-              <button class="btn-2" type="button"><a class="button-contactus" href="#contact">Contact Us</a></button>
-            </div>
-            <div class="col-2">
-              <img src="images/landing.png" alt="gambar landing">
-            </div>
-          </div>
+      <header>
+        <div class="header-text">
+          <h1>Lorem ipsum dolor</h1>
+          <h2>sit amet consectetur</h2>
         </div>
-      </section>
-  </section>
+        <p class="subtext">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Dolores, eum autem.</p>
+        <div class="button-container">
+          <a href="#" class="button more-info">More Info</a>
+          <a href="#" class="button contact-us">Contact Us</a>
+        </div>
+        <img src="images/landing.png" alt="Landing" class="header-image">
+      </header>
+
+      <header class="About">
+        <div class="header-text-2">
+          <h1>We are the best in</h1>
+          <h2>our field</h2>
+        </div>
+        <p class="subtext">for the last 5 year we always give the best <br>to our client and we will always the best</p>
+        <img src="images/about.png" alt="About" class="about-image">
+      </header>
 </body>
 </html>
