--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           <h1><a href="#Coder"></a>Coder</h1>
         </div>
         <ul>
-          <li><a href="#About">About</a></li>
-          <li><a href="#Service">Service</a></li>
-          <li><a href="#Contact">Contact</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Service</a></li>
+          <li><a href="">Contact</a></li>
         </ul>
       </nav>
       <header>
@@ -33,13 +33,65 @@
         <img src="images/landing.png" alt="Landing" class="header-image">
       </header>
 
-      <header class="About">
+      
+        </div>
+        <header class="About">
         <div class="header-text-2">
           <h1>We are the best in</h1>
           <h2>our field</h2>
-        </div>
         <p class="subtext">for the last 5 year we always give the best <br>to our client and we will always the best</p>
         <img src="images/about.png" alt="About" class="about-image">
-      </header>
+        <div class= "angka-text">
+          <p>
+          <span>100+</span>
+          <span>300+</span>
+          <span>500+</span>
+          </p>
+      </div>
+        </div>
+    </header>
+    <header class="Service">
+      <div class="header-text-3">
+        <h1>Our service</h1>
+      <p class="subtext">We have the best service to solve your problem</p>
+      <div>
+        <button class="contact-us-button-right">Contact Us</button>
+    </div>
+    </div>
+    </header>
+    <img src="images/service1.png" alt="service1" class="gambar-1">
+    <img src="images/service2.png" alt="service2" class="gambar-2">
+    <img src="images/service3.png" alt="service3" class="gambar-3">
+    <div class="grid-1">
+        <h1 class="kotak1">Web Application</h1>
+        <p class="teks-1">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          optio qoud quasi aperiam at ratione
+        </p>
+    </div>
+    <div class="grid-2">
+        <h1 class="kotak2">UI/UX Design</h1>
+        <p class="teks-2">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          optio qoud quasi aperiam at ratione
+        </p>
+    </div>
+    <div class="grid-3">
+        <h1 class="kotak-3">Mobile Application</h1>
+        <p class="teks-3">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+          optio qoud quasi aperiam at ratione
+        </p>
+    </div>
+    <div class="Contactus-text">
+        <p>Contact Us</p>
+    </div>
+    <div class="lorem-text">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, tempore!</p>
+    </div>
+    <div class="Location-text">
+        <p>Our Location</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3963.7184652101078!2d107.4444055!3d-6.5571807!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e690fb318e50ddd%3A0xce1f148ea489788e!2sTaman%20Air%20Mancur%20Sri%20Baduga!5e0!3m2!1sen!2sid!4v1696738228362!5m2!1sen!2sid" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div> 
 </body>
 </html>
